fix for repos on iphone

--- a/_scss/components/_expandable-box.scss
+++ b/_scss/components/_expandable-box.scss
@@ -49,3 +49,50 @@
         font-size: 1.5rem;
     }
 }
+
+
+/* For Iphone
+-------------------------------------------------*/
+@media screen and (max-width: 480px) {
+    
+
+.expandable-box {
+    position: relative;
+    padding: 0;
+    text-align: center;
+}
+
+.expandable-box-top {
+    
+}
+
+.expandable-box-bottom {
+    /*@extend %clearfix;*/
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    background: darken($colorPrimary, 5%);
+    a, span {
+        position: relative;
+        z-index: 100;
+        display: inline-block;
+        float: left;
+        width: 100%;
+        height: 45px;
+        padding: 10px 0;
+        color: $white;
+        text-align: center;
+        text-decoration: none;
+        &:first-child {
+            background: darken($colorPrimary, 2%);
+        }
+        &:last-child {
+            background: lighten($colorPrimary, 4%);
+        }
+    }
+    .icon {
+        color: $white;
+        font-size: 1.5rem;
+    }
+}
+}
