--- a/css/main.css
+++ b/css/main.css
@@ -8719,6 +8719,45 @@ Example showing how to change the color/size of the icons:
   font-size: 1.5rem;
 }
 
+/* For Iphone
+-------------------------------------------------*/
+@media screen and (max-width: 480px) {
+  .expandable-box {
+    position: relative;
+    padding: 0;
+    text-align: center;
+  }
+  .expandable-box-bottom {
+    /*@extend %clearfix;*/
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    background: #0053b1;
+  }
+  .expandable-box-bottom a, .expandable-box-bottom span {
+    position: relative;
+    z-index: 100;
+    display: inline-block;
+    float: left;
+    width: 100%;
+    height: 45px;
+    padding: 10px 0;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+  }
+  .expandable-box-bottom a:first-child, .expandable-box-bottom span:first-child {
+    background: #005ac0;
+  }
+  .expandable-box-bottom a:last-child, .expandable-box-bottom span:last-child {
+    background: #0069de;
+  }
+  .expandable-box-bottom .icon {
+    color: #fff;
+    font-size: 1.5rem;
+  }
+}
+
 /* TOOLTIP
 -------------------------------------------------*/
 .tooltip > .tooltip-inner {
